Clients. Ready top menu.

--- a/server_clients/layouts/source_x/base.ejs
+++ b/server_clients/layouts/source_x/base.ejs
@@ -3,7 +3,7 @@
 <div id="wrapper">
 	<%= include parts/header.ejs %>
 	<section>
-		<%-body -%>
+		<%-body %>
 		<%= include parts/sidebar.ejs%>
 	</section>
 	<%= include parts/footer.ejs%>
