--- a/server_clients/layouts/source_x/parts/footer.ejs
+++ b/server_clients/layouts/source_x/parts/footer.ejs
@@ -1,6 +1,7 @@
-<footer>
+<footer >
+	<div class="row dline"></div>
 	<p>
-		Copyright &copy 2017 <a href="http://github.com/eagle7410">Igor Stcherbina</a>.
-		All Rights Reserved.
+		<%= __('Copyright') %> &copy 2018 <a href="http://github.com/eagle7410"><%= __('Igor Stcherbina') %></a>.
+		<%= __('All Rights Reserved') %>.
 	</p>
 </footer>
