--- a/server_clients/layouts/source_x/parts/head.ejs
+++ b/server_clients/layouts/source_x/parts/head.ejs
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
+	<link rel="icon" type="/static/image/png" sizes="96x96" href="static/imgages/favicon.png">
 	<link rel="stylesheet" href="/static/css/style.css"/>
 	<link rel="stylesheet" href="/static/css/nivo-slider.css" type="text/css" media="screen"/>
 	<link rel="stylesheet" href="/static/css/default/default.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script type="text/javascript" src="/static/js/app.js"></script>
 	<title><%= appName %></title>
 </head>
