--- a/server_clients/views/Home/show.ejs
+++ b/server_clients/views/Home/show.ejs
@@ -1,64 +1,35 @@
-<% layout(`../../layouts/${theme}/home`) -%>
-<div id="line">
-	<div class="dline"></div>
-	<h1>Our Services</h1>
+<% layout(`../../layouts/${theme}/home`) %>
+<div class="row">
+	<h1><%= __('Latest news') %></h1>
 	<div class="dline"></div>
 </div>
-<div id="ourserv">
-	<article>
+
+<div class="row ourserv">
+	<article class="col-md-4">
 		<h1>Web Design</h1>
 		<img src="static/images/1.jpg" alt=""/>
 		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida,
 			orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet.</p>
-		<a href="fullwidth.html" class="rm">Read More</a>
+		<a href="fullwidth.html" class="btn btn-info">Read More</a>
 	</article>
-	<article>
+	<article class="col-md-4">
 		<h1>Graphic Design</h1>
-		<img src="static/images/2.jpg" alt=""/>
+		<!--<img src="static/images/2.jpg" alt=""/>-->
 		<p>Consectetuer adipiscing elit. Suspendisse enim elit. Morbi commodo, ipsum sed pharetra gravida, orci
 			magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit.</p>
-		<a href="fullwidth.html" class="rm">Read More</a>
+		<a href="fullwidth.html" class="btn btn-info">Read More</a>
 	</article>
-	<article class="lastarticle">
+	<article class="col-md-4">
 		<h1>Web Development</h1>
+		<p >
+			<div class="small">Author: verycooleagle@gamil.com</div>
+			<div class="small">Publish: 2018-04-25</div>
+		</p>
 		<img src="static/images/3.jpg" alt=""/>
 		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida,
 			orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit enim.</p>
-		<a href="fullwidth.html" class="rm">Read More</a>
+		<a href="fullwidth.html" class="btn btn-info">Read More</a>
 	</article>
 </div>
-<div id="sline">
-	<div class="sdline"></div>
-	<h1>Latest Projects</h1>
-	<div class="sdline"></div>
-</div>
-<div id="latestp">
-	<article>
-		<h1>Lorem Ipsum Dolor Sit</h1>
-		<img src="static/images/1s.jpg" alt=""/>
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida,
-			orci magna rhoncus neque.</p>
-		<a href="singlepost.html" class="rm">Read More</a>
-	</article>
-	<article>
-		<h1>Lorem Ipsum Dolor Sit</h1>
-		<img src="static/images/2s.jpg" alt=""/>
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida,
-			orci magna rhoncus neque.</p>
-		<a href="singlepost.html" class="rm">Read More</a>
-	</article>
-	<article>
-		<h1>Lorem Ipsum Dolor Sit</h1>
-		<img src="static/images/3s.jpg" alt=""/>
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida,
-			orci magna rhoncus neque.</p>
-		<a href="singlepost.html" class="rm">Read More</a>
-	</article>
-	<article class="lastarticle">
-		<h1>Lorem Ipsum Dolor Sit</h1>
-		<img src="static/images/4s.jpg" alt=""/>
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida,
-			orci magna rhoncus neque.</p>
-		<a href="singlepost.html" class="rm">Read More</a>
-	</article>
-</div>
+
+<%- partial(`../../layouts/${theme}/parts/pagination.ejs`) %>
