Cliewnts. Ready first solution for news.

--- a/server_clients/template/sourcexsrt/contact.html
+++ b/server_clients/template/sourcexsrt/contact.html
@@ -14,7 +14,7 @@
     </head>
 	<body id="contact">
 		<div id="wrapper">
-		
+
 			<!--__--__--__--__--__--  L O G O  &   N A V    B A R --__--___--__--__--__-->
 			<header>
 				<div id="logo">
@@ -25,7 +25,7 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="index.html" id="homenav">Home</a></li>
+						<li><a href="index.html" id="homenav">News</a></li>
 						<li><a href="blog.html" id="blognav">Blog</a></li>
 						<li><a href="fullwidth.html" id="fullwidthnav">Full width</a></li>
 						<li><a href="contact.html" id="contactnav">Contact</a></li>
@@ -33,7 +33,7 @@
 					</ul>
 				</nav>
 			</header>
-			
+
 			<!--__--__--__--__--  M A I N   C O N T E N T  --__--__--__--___--__--__-->
 			<section>
 				<div id="contactpost">
@@ -41,8 +41,8 @@
 					<p>Below is an example of how a contact form might look with this template:</p>
 					<form method="post" action="#">
 				        <div id="contactform">
-						<p><label for="name">Name</label><input type="user" name="name" id="name" placeholder="your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'your name'" /></p> 
-						<p><label for="email">Email</label><input type="email" name="email" id="email" placeholder="your@email.com" onfocus="this.placeholder = ''" onblur="this.placeholder = 'your@email.com'" /></p> 
+						<p><label for="name">Name</label><input type="user" name="name" id="name" placeholder="your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'your name'" /></p>
+						<p><label for="email">Email</label><input type="email" name="email" id="email" placeholder="your@email.com" onfocus="this.placeholder = ''" onblur="this.placeholder = 'your@email.com'" /></p>
 					    <p><label for="message">Message</label><textarea name="message" id="message"></textarea></p>
 						<p style="padding-top: 105px"><span>&nbsp;</span><input class="submit" type="submit" name="contact_submitted" value="submit" /></p>
 						</div>
@@ -60,7 +60,7 @@
 							<li><a href="#">Suspendisse Enim Elit Tempor Acer</a></li>
 							<li><a href="#">Mauris Sed Lectus Duieleifend Quis Sem</a></li>
 							<li><a href="#">Suspendisse Enim Elit Tempor Acer Fermentum Vulputate</a></li>
-							<li><a href="#">Mauris Sed Lectus Duieleifend Quis Sem</a></li>						
+							<li><a href="#">Mauris Sed Lectus Duieleifend Quis Sem</a></li>
 						</ul>
 					</aside>
 					<aside>
@@ -90,11 +90,10 @@
 			<footer>
 				<p>Copyright &copy 2013 Source X by Youssef Nassim and Zakariya Lhamri, design from <a href="http://geeksband.com">Geeksband.com</a> All Rights Reserved.</p>
 			</footer>
-		</div>			
+		</div>
 	</body>
 </html>
-		
-		
-			
-    
-    
+
+
+
+
