--- a/server_clients/template/sourcexsrt/index.html
+++ b/server_clients/template/sourcexsrt/index.html
@@ -14,7 +14,7 @@
     </head>
 	<body id="home">
 		<div id="wrapper">
-		
+
 			<!--__--__--__--__--__--  L O G O  &   N A V    B A R --__--___--__--__--__-->
 			<header>
 				<div id="logo">
@@ -25,7 +25,7 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="index.html" id="homenav">Home</a></li>
+						<li><a href="index.html" id="homenav">News</a></li>
 						<li><a href="blog.html" id="blognav">Blog</a></li>
 						<li><a href="fullwidth.html" id="fullwidthnav">Full width</a></li>
 						<li><a href="contact.html">Contact</a></li>
@@ -33,7 +33,7 @@
 					</ul>
 				</nav>
 			</header>
-			
+
 			<!--__--__--__--__--  T H E    S L I D E R --__--__--__--___--__--__--__-->
 			<div class="slider-wrapper theme-default">
 				<div id="slider" class="nivoSlider">
@@ -48,7 +48,7 @@
 				$('#slider').nivoSlider({pauseTime: 6000,});
 			});
 			</script>
-			
+
 			<!--__--__--__--__--  M A I N   C O N T E N T  --__--__--__--___--__--__-->
 			<section>
 				<div id="line">
@@ -107,16 +107,15 @@
 						<a href="singlepost.html" class="rm">Read More</a>
 					</article>
 				</div>
-			</section>				
+			</section>
 			<!--__--__--__--__--  T H E    F O O T E R --__--__--__--___--__--__--__-->
 			<footer>
 				<p>Copyright &copy 2013 Source X by Youssef Nassim and Zakariya Lhamri, design from <a href="http://geeksband.com">Geeksband.com</a>. All Rights Reserved.</p>
 			</footer>
-		</div>			
+		</div>
 	</body>
 </html>
-		
-		
-			
-    
-    
+
+
+
+
