--- a/server_clients/template/sourcexsrt/fullwidth.html
+++ b/server_clients/template/sourcexsrt/fullwidth.html
@@ -14,7 +14,7 @@
     </head>
 	<body id="fullwidth">
 		<div id="wrapper">
-		
+
 			<!--__--__--__--__--__--  L O G O  &   N A V    B A R --__--___--__--__--__-->
 			<header>
 				<div id="logo">
@@ -25,7 +25,7 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="index.html" id="homenav">Home</a></li>
+						<li><a href="index.html" id="homenav">News</a></li>
 						<li><a href="blog.html" id="blognav">Blog</a></li>
 						<li><a href="fullwidth.html" id="fullwidthnav">Full width</a></li>
 						<li><a href="contact.html">Contact</a></li>
@@ -33,7 +33,7 @@
 					</ul>
 				</nav>
 			</header>
-			
+
 			<!--__--__--__--__--  M A I N   C O N T E N T  --__--__--__--___--__--__-->
 			<section>
 			<h1>No Sidebar Page</h1>
@@ -60,7 +60,7 @@
 				  irure dolor in reprehenderit in voluptate velit esse cillum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 				  incididunt ut.</p>
 				  <p><a href="#">This is a hyperlink</a>
-				  
+
 			 <h2 class="mg">Lists</h2>
 				<p class="mg">This is an unordered list:</p>
 				<ul>
@@ -131,11 +131,10 @@
 			<footer>
 				<p>Copyright &copy 2013 Source X by Youssef Nassim and Zakariya Lhamri, design from <a href="http://geeksband.com">Geeksband.com</a> All Rights Reserved.</p>
 			</footer>
-		</div>			
+		</div>
 	</body>
 </html>
-		
-		
-			
-    
-    
+
+
+
+
