--- a/server_clients/views/Company/about.ejs
+++ b/server_clients/views/Company/about.ejs
@@ -14,7 +14,7 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="index.html" id="homenav">Home</a></li>
+						<li><a href="index.html" id="homenav">News</a></li>
 						<li><a href="blog.html" id="blognav">Blog</a></li>
 						<li><a href="fullwidth.html" id="fullwidthnav">Full width</a></li>
 						<li><a href="contact.html">Contact</a></li>
