--- a/server_clients/views/singlepost.html
+++ b/server_clients/views/singlepost.html
@@ -14,7 +14,7 @@
     </head>
 	<body id="blog">
 		<div id="wrapper">
-		
+
 			<!--__--__--__--__--__--  L O G O  &   N A V    B A R --__--___--__--__--__-->
 			<header>
 				<div id="logo">
@@ -25,7 +25,7 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="index.html" id="homenav">Home</a></li>
+						<li><a href="index.html" id="homenav">News</a></li>
 						<li><a href="blog.html" id="blognav">Blog</a></li>
 						<li><a href="fullwidth.html" id="fullwidthnav">Full width</a></li>
 						<li><a href="contact.html">Contact</a></li>
@@ -33,7 +33,7 @@
 					</ul>
 				</nav>
 			</header>
-			
+
 			<!--__--__--__--__--  M A I N   C O N T E N T  --__--__--__--___--__--__-->
 			<section>
 				<article id="singlepost">
@@ -55,7 +55,7 @@
 							<li><a href="#">Suspendisse Enim Elit Tempor Acer</a></li>
 							<li><a href="#">Mauris Sed Lectus Duieleifend Quis Sem</a></li>
 							<li><a href="#">Suspendisse Enim Elit Tempor Acer Fermentum Vulputate</a></li>
-							<li><a href="#">Mauris Sed Lectus Duieleifend Quis Sem</a></li>						
+							<li><a href="#">Mauris Sed Lectus Duieleifend Quis Sem</a></li>
 						</ul>
 					</aside>
 					<aside>
@@ -85,11 +85,10 @@
 			<footer>
 				<p>Copyright &copy 2013 Source X by Youssef Nassim and Zakariya Lhamri, design from <a href="http://geeksband.com">Geeksband.com</a> All Rights Reserved.</p>
 			</footer>
-		</div>			
+		</div>
 	</body>
 </html>
-		
-		
-			
-    
-    
+
+
+
+
