--- a/server_clients/layouts/source_x/home.ejs
+++ b/server_clients/layouts/source_x/home.ejs
@@ -1,6 +1,6 @@
 <%= include parts/head.ejs %>
-<body id="home">
-<div id="wrapper " class="container">
+<body>
+<div >
 	<%= include parts/header.ejs %>
 	<%= include parts/include-js.ejs %>
 	<section><%-body %></section>
