--- a/server_clients/static/css/style.css
+++ b/server_clients/static/css/style.css
@@ -10,16 +10,6 @@
     font-style: normal;
 }
 @font-face {
-    font-family: 'Source';
-    src: url('../fonts/SourceSansPro-Light-webfont.eot');
-    src: url('../fonts/SourceSansPro-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-Light-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-Light-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-Light-webfont.svg#SourceSansProLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
     font-family: 'ethno';
     src: url('../fonts/ethnocentric_rg-webfont.eot');
     src: url('../fonts/ethnocentric_rg-webfont.eot?#iefix') format('embedded-opentype'),
@@ -53,20 +43,11 @@ p{
 }
 
 /************** G E N E R A L    S T Y L E ***************/
-#wrapper{
-	width: 950px;
-	margin: 16px auto;
-	background-color: #121212;
-	padding: 20px 20px;
-	box-shadow: 0 4px 6px #000;
-}
-
 body{
 	background: url('../images/bg.png') repeat;
-	font-family: Source, Tahoma, sans-serif;
 	color: #fff;
 	font-size: 14px;
-	text-shadow: 1px 1px 0px #000;
+	padding: 2em;
 }
 #srt{
 	color: #f9f9f9;
@@ -74,8 +55,6 @@ body{
 	float: right;
 	position: absolute;
 	top: 14px;
-	/*left: 90px;*/
-	text-shadow: 1px 1px 0px #000;
 	font-size: 36px;
 	font-style: italic;
 	font-family: ethno, sans-serif;
@@ -91,38 +70,33 @@ body{
 	color: #b82924;
 	display: block;
 	float: right;
-	text-shadow: none;
 	font-style: italic;
 	letter-spacing: 2px;
 }
 
 /************* L O G O   &  N A V   B A R    S T Y L E ****************/
 header h1{
-	font-family: LeagueGothic, Impact, sans-serif;
 	font-weight: normal;
 	text-transform: uppercase;
 	font-size: 2.5em;
 	text-shadow: 1px 1px 0 #000;
 	position: relative;
-	margin-bottom: 2px;
+	margin-top: 1.5em;
 }
 header h2{
 	margin-top: 10px;
 	font-size: 16px;
 	font-weight: normal;
-	font-family: LeagueGothic, sans-serif;
 	text-shadow: 1px 1px 0 #000;
 	text-transform: uppercase;
 }
 
 nav a {
 	color: #fff;
-	font-family: LeagueGothic, sans-serif;
 	text-decoration: none;
 	font-size: 1.5em;
 	margin-left: 25px;
 	text-transform: uppercase;
-	text-shadow: 1px 1px 0px #000;
 }
 
 nav{
@@ -135,7 +109,6 @@ a.nav-link.active {
 
 /************* H O M E    C O N T E N T *******************/
 #line h1{
-	font-family: LeagueGothic, Impact, sans-serif;
 	font-weight: normal;
 	font-size: 30px;
 	text-transform: uppercase;
@@ -145,13 +118,13 @@ a.nav-link.active {
 }
 #line h1, .dline{
 	display: inline-block;
-	*display: inline;
 	zoom:1;
 	margin: 0 0 0 10px;
 }
 #line{
-		margin: 0 0 0 80px;
+	margin: 0 0 0 80px;
 }
+
 .dline{
 	width: 100%;
 	height: 3px;
@@ -162,7 +135,6 @@ a.nav-link.active {
 	vertical-align: top;
 }
 .ourserv article h1, #latestp article h1{
-	font-family: LeagueGothic, sans-serif;
 	font-weight: normal;
 	text-transform: uppercase;
 	font-size: 22px;
@@ -172,16 +144,13 @@ a.nav-link.active {
 	margin:0;
 }
 .ourserv{
-	margin: 8px 0 15px 20px;
-	width: 100%;
+	margin-bottom: 3em;
 }
 .ourserv img, #latestp img{
 	margin-bottom: 5px;
-    box-shadow: 0 4px 6px #000;
 }
 
 #sline h1{
-	font-family: LeagueGothic, Impact, sans-serif;
 	font-weight: normal;
 	font-size: 30px;
 	text-transform: uppercase;
@@ -191,7 +160,6 @@ a.nav-link.active {
 }
 #sline h1, .sdline{
 	display: inline-block;
-	*display: inline;
 	zoom:1;
 	margin: 0 0 0 10px;
 }
@@ -207,85 +175,10 @@ a.nav-link.active {
 #latestp article{
 	width: 210px;
 	display: inline-block;
-	*display: inline;
 	zoom:1;
 	margin-right: 20px;
 }
 #latestp{
-	margin-left: 20px;
-}
-
-/************* B L O G    S T Y L E  &   C O N T A C T   P A G E *****************************/
-#articles, #sidebar{
-	display: inline-block;
-	vertical-align: top;
-	*display: inline;
-	zoom:1;
-}
-
-#sidebar, #contat #sidebar{
-	width: 280px;
-	margin:0 0 0 55px;
-}
-#articles, #contactpost{
-	width: 600px;
-	margin:0 0 40px 0;
-}
-
-#sidebar h1, #contact #sidebar h1{
-	font-family: LeagueGothic, sans-serif;
-	font-weight: normal;
-	text-transform: uppercase;
-	font-size: 22px;
-	text-shadow: 1px 1px 0 #000;
-	word-spacing: 2px;
-	margin-bottom: 4px;
-}
-#sidebar li, #contact #sidebar li {
-	margin:0 0 4px 25px;
-	color: #b82924;
-}
-#sidebar li:hover, #contact #sidebar li:hover{
-	margin-left: 30px;
-}
-#sidebar li a:hover, #contact #sidebar li a:hover{
-	text-decoration: underline;
-}
-#blog aside, #contact #sidebar aside{
-	margin: 0 0 20px 0;
-}
-#cat, #archives, #contact #sidebar  #cat, #contact #sidebar #archives{
-	width: 130px;
-	display: inline-block;
-	vertical-align: top;
-	*display: inline;
-	zoom:1;
-}
-.continue{
-	text-decoration: underline;
-}
-
-/************* F U L L  W I D T H   &  S I N G L E   P O S T    S T Y L E*********************/
-#fullwidth h1,#fullwidth  h2,#fullwidth  h3,#fullwidth  h4,#fullwidth  h5,#fullwidth  h6, h1, h2, h3, h4, h5, h6{
-	font-family: LeagueGothic, sans-serif;
-	text-transform: uppercase;
-	font-weight: normal;
-}
-#fullwidth section h2, #singlepost section h2{
-	color: #b82924;
-}
-.mg{ /*just for examples, do not use this class*/
-	margin: 8px 0 12px 0;
-}
-#fullwidth section a, #singlepost section a{
-	text-decoration: underline;
-}
-#fullwidth section ul li, #singlepost section ul li{
-	list-style-type: square;
-	margin-left: 20px;
-}
-#fullwidth section ol li, #singlepost section ol li{
-	list-style-type: decimal;
 	margin-left: 20px;
 }
 
@@ -304,9 +197,4 @@ a.nav-link.active {
 }
 header {
 	margin: 15px 0;
-}
-
-.small {
-	font-size: 65% !important;
-	min-height: 12px;
 }
