--- a/server_clients/layouts/source_x/parts/head.ejs
+++ b/server_clients/layouts/source_x/parts/head.ejs
@@ -7,6 +7,6 @@
 	<link rel="stylesheet" href="/static/css/nivo-slider.css" type="text/css" media="screen"/>
 	<link rel="stylesheet" href="/static/css/default/default.css" type="text/css" media="screen"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<script type="text/javascript" src="/static/js/app.js"></script>
+	<script type="text/javascript" src="/static/js/app.min.js"></script>
 	<title><%= appName %></title>
 </head>
