Bad work auht client.

--- a/server_clients/layouts/source_x/home.ejs
+++ b/server_clients/layouts/source_x/home.ejs
@@ -5,6 +5,7 @@
 	<%= include parts/include-js.ejs %>
 	<section><%-body %></section>
 	<%= include parts/footer.ejs%>
+	<%= include parts/form-login.ejs%>
 </div>
 </body>
 </html>
