--- a/server_clients/layouts/source_x/parts/menu-footer.ejs
+++ b/server_clients/layouts/source_x/parts/menu-footer.ejs
@@ -3,11 +3,11 @@
 		<% topMenu.forEach(item => { %>
 			<% if (item.subs)  { %>
 				<% item.subs.forEach(sub => { %>
-					<a class="nav-link <%= sub.isActive ? 'active' : '' %>" href="<%= sub.url%>"><%= __(sub.name) %></a>
+					<a class="nav-link <%= sub.isActive ? 'active' : '' %> <%= sub.class || '' %>" href="<%= sub.url%>"><%= __(sub.name) %></a>
 				<% }) %>
 			<% } else {%>
 				<li class="nav-item">
-					<a class="nav-link <%= item.isActive ? 'active' : '' %>" href="<%= item.url%>"><%= __(item.name) %></a>
+					<a class="nav-link <%= item.isActive ? 'active' : '' %> <%= item.class || '' %>" href="<%= item.url%>"><%= __(item.name) %></a>
 				</li>
 			<% } %>
 		<% }) %>
