First solution for login logout clients.

--- a/server_clients/layouts/source_x/parts/form-login.ejs
+++ b/server_clients/layouts/source_x/parts/form-login.ejs
@@ -22,6 +22,7 @@
 							       placeholder="<%= __('You@email.com') %>"
 							       required
 							       autofocus
+							       value="client1232@gmail.com"
 							/>
 						</div>
 					</div>
@@ -33,6 +34,7 @@
 							       id="password"
 							       placeholder="<%= __('Password') %>"
 							       required
+							       value="Client1232"
 							/>
 						</div>
 					</div>
