--- a/server_clients/layouts/source_x/home.ejs
+++ b/server_clients/layouts/source_x/home.ejs
@@ -1,13 +1,15 @@
 <%= include parts/head.ejs %>
 <body>
-<div >
-	<%= include parts/header.ejs %>
-	<%= include parts/include-js.ejs %>
-	<section><%-body %></section>
-	<%= include parts/footer.ejs%>
-	<%= include parts/form-login.ejs%>
-</div>
+	<div>
+		<%= include parts/header.ejs %>
+		<%= include parts/include-js.ejs %>
+		<section><%-body %></section>
+		<%= include parts/footer.ejs%>
+	</div>
 </body>
+<% if (!user) { %>
+	<%= include parts/form-login.ejs%>
+<% } %>
 </html>
 
 
