--- a/server_clients/views/Company/message_about_confirm.ejs
+++ b/server_clients/views/Company/message_about_confirm.ejs
@@ -1,15 +1,10 @@
 <% layout(`../../layouts/${theme}/home`) %>
 <h1><%= __('registration') %></h1>
-<div class="alert alert-success" id="info-alert">
+<div class="alert alert-success">
 	<p>
 		<%= __('A letter has been sent to you by email. In which the link to confirm the registration.') %><br/>
 		<%= __('The link will be valid for 4 hours') %>
 	</p>
 	<p><%= __('Sincerely Cool service') %></p>
 </div>
-<style>
-	#info-alert{
-		background: #28a745;
-	}
-</style>
 
