Clients. Compres front.

--- a/server_clients/layouts/source_x/parts/scripts.ejs
+++ b/server_clients/layouts/source_x/parts/scripts.ejs
@@ -1,2 +1,3 @@
+<script type="text/javascript" src="/static/js/style.min.js" async></script>
 <script type="text/javascript" src="/static/js/app.min.js"></script>
 
