--- a/server_clients/layouts/source_x/parts/head.ejs
+++ b/server_clients/layouts/source_x/parts/head.ejs
@@ -1,8 +1,5 @@
 <head>
 	<meta charset="utf-8"/>
-	<link rel="icon" type="static/image/png" sizes="96x96" href="static/imgages/favicon.png">
-	<link rel="stylesheet" href="/static/css/style.css"/>
-	<link rel="stylesheet" href="/static/css/default/default.css" type="text/css" media="screen"/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="icon" type="static/image/png" sizes="96x96" href="/static/images/favicon.png">
 	<title><%= appName %></title>
 </head>
