--- a/modules/data-converter/pdf/templates/parts/logo.ejs
+++ b/modules/data-converter/pdf/templates/parts/logo.ejs
@@ -1,8 +1,6 @@
 <header>
 	<div id="logo">
-		<h1>News<span id="iisrt"><span id="ii">II</span>  <span id="srt"><%= appName %></span></span></h1>
-		<div id="tagline">
-			<h2>Best news for you!</h2>
-		</div>
+		<h1><%= appName %></h1>
+		<h2>Best news for you!</h2>
 	</div>
 </header>
