Employee front fixed.

--- a/server_employee/front/src/assets/sass/material-dashboard.scss
+++ b/server_employee/front/src/assets/sass/material-dashboard.scss
@@ -32,19 +32,16 @@
 @import "md/forms";
 @import "md/alerts";
 @import "md/tables";
-@import "md/checkboxes";
-@import "md/radios";
 @import "md/togglebutton";
-@import "md/ripples";
-@import "md/pills";
-@import "md/dialogs";
 @import "md/navbars";
-@import "md/popups";
+//@import "md/ripples";
+//@import "md/pills";
+//@import "md/popups";
 @import "md/footers";
 
 // Fancy Stuff
 @import "md/dropdown";
 @import "md/cards";
-@import "md/tabs";
+//@import "md/tabs";
 @import "md/chartist";
 @import "md/responsive";
