Exetends build front. Attach pm2.

--- a/server_employee/front/src/assets/sass/material-dashboard.scss
+++ b/server_employee/front/src/assets/sass/material-dashboard.scss
@@ -46,3 +46,5 @@
 @import "md/chartist";
 @import "md/responsive";
 @import "./themify-icons.css";
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
