--- a/server_clients/views/Company/registration.ejs
+++ b/server_clients/views/Company/registration.ejs
@@ -1,4 +1,3 @@
-<% layout(`../../layouts/${theme}/home`) %>
 <h1><%= __('registration') %></h1>
-<%= include registration-form.ejs %>
+<%- include('registration-form.ejs') %>
 
