--- a/server_clients/views/News/show.ejs
+++ b/server_clients/views/News/show.ejs
@@ -1,4 +1,3 @@
-<% layout(`../../layouts/${theme}/home`) %>
 <div class="row">
 	<h1><%= __('Latest news') %></h1>
 	<div class="dline"></div>
@@ -21,4 +20,4 @@
 	<% counter++; }) %>
 </div>
 
-<%- partial(`../../layouts/${theme}/parts/pagination.ejs`) %>
+<%- partial(`../layouts/${theme}/parts/pagination.ejs`) %>
